# 0CompactMem

./: .mcp.json  CHANGELOG.md  CITATION.cff  README.en.md  README.md  README.zh.md  config.py  glama.json  knowledge_vfs_backends.py  llms.txt  mcp_memory_lookup.py  production_assertions.py  push-github.sh  pyproject.toml  scorer.py  store.py  store_criu.py  store_mm.py  store_proc.py  store_swap.py  store_vfs.py  vfs_backend_sqlite.py
.claude-plugin/: plugin.json
docs/: DESIGN_PHILOSOPHY.md  PROBLEMS_SOLVED.md  SETUP.md
hooks/: context_budget_guard.py  extractor.py  extractor_pool.py  loader.py  memtrace.py  pre_compact.py  retriever.py  retriever_daemon.py  tac_compressor.py  task_result_collector.py
marketing/: arxiv-preprint-outline.md  awesome-list-prs.md  blog-en-os-memory-for-agents.md  blog-zh-os-memory-for-agents.md  discussions-welcome-post.md  product-hunt.md  show-hn.md  social-zh-shortform.md  twitter-launch-thread.md
paper/: Makefile  benchmark_results.json  main.tex  references.bib  run_benchmarks.py
tests/: test_causal_chain.py  test_cgroups_quota.py  test_chaos.py  test_cold_start.py  test_compaction.py  test_confidence_warmstart.py  test_e2e_baseline_result.json  test_iter513_overcommit_kill.py  test_iter514_ksm_scan.py  test_iter515_userfaultfd.py  test_iter522_numa_balancing.py  test_iter524_mincore.py  test_iter530_put_page.py  test_iter531_mlock_onfault.py  test_iter532_cpuset.py  test_iter536_seccomp_filter.py  test_iter538_printk_ratelimit.py  test_iter541_inode_permission.py  test_iter542_oom_reaper_onfault.py  test_iter555_schedstat.py  (+11 more)
(+3 files in other folders)
